@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="8dp"
         android:orientation="horizontal">
 
         <Button
@@ -89,6 +90,15 @@
                     android:textSize="25dp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/noticeListView"
+                android:layout_margin="10dp"
+                android:dividerHeight="10dp"
+                android:divider="#ffffff"></ListView>
+
         </LinearLayout>
 
         <RelativeLayout
